Προσθήκες στο 01.Blink.md

--- a/01.Blink.md
+++ b/01.Blink.md
@@ -1,1 +1,3 @@
 # Blink με την Micropython
+## Εισαγωγή
+Σ' αυτό το μάθημα, θα χρησιμοποιήσουμε την MicroPython για να αναβοσβήνουμε το LED που βρίσκεται πάνω στον μικροελεγκτή μας. Για τον προγραμματισμό, θα χρησιμοποιήσουμε το Thonny IDE.
