--- a/01.Blink/01.Blink.md
+++ b/01.Blink/01.Blink.md
@@ -7,25 +7,27 @@
 
 ## Πώς "ανάβω" και "σβήνω" ένα LED
 
-Ο μικροελεγκτής που θα χρησιμοποιήσουμε στο εργαστήριο είναι o ESP32 WeMos LOLIN32. Στην παρακάτω εικόνα, μπορούμε να δούμε τον μικροελεγκτή και την λειτουργία που υποστηρίζει κάθε ένας ακροδέκτης του. Παρατηρώντας την εικόνα, θα εντοπίσουμε ακροδέκτες με όνομα GPIOxx στους οποίος έχουμε την δυνατότητα να συνδέσουμε εξαρτήματα των οποίων την λειτουργία μπουρούμε να προγραμματίσουμε με την MicroPython. Επίσης, βλέπουμε ότι υπάρχουν **ακροδέκτες γείωσης (GND)** και **τάσης (3.3V)**. 
+Ο μικροελεγκτής που θα χρησιμοποιήσουμε στο εργαστήριο είναι o **ESP32 WeMos LOLIN32**. Στην παρακάτω εικόνα, μπορούμε να δούμε τον μικροελεγκτή και την λειτουργία που υποστηρίζει κάθε ένας ακροδέκτης του. Παρατηρώντας την εικόνα, θα εντοπίσουμε ακροδέκτες με όνομα **GPIOxx (General Purpose Input Output)** στους οποίος έχουμε την δυνατότητα να συνδέσουμε εξαρτήματα των οποίων την λειτουργία μπουρούμε να προγραμματίσουμε με την MicroPython. Επίσης, βλέπουμε ότι υπάρχουν **ακροδέκτες γείωσης (GND)** και **τάσης (3.3V)**.
+
 ![WeMos Lolin32](ESP32-WeMos-LOLIN32.jpg)
+
 Στον συγκεκριμένο μικροελεγκτή, το ενσωμετωμένο LED είναι συνδεδεμένο στον ακροδέκτη 5 και στο παρακάτω πρόγραμμα βλέπουμε τις εντολές με τις οποίες το "ανάβουμε" και το "σβήνουμε".
+
 ```python
-from machine import Pin # Get the Pin function from the machine module.
-from time import sleep # Get the sleep library from the time module.
+from machine import Pin # Φόρτωση της συνάρτησης Pin από την βιβλιοθήκη machine.
+from time import sleep # Φόρτωση της συνάρτησης sleep από την βιβλιοθήκη time.
 
-# This is the built-in green LED on the Pico.
-BUILT_IN_LED_PIN = 25
-# change this to the following named pin on the "W"
-# BUILT_IN_LED_PIN = Pin("LED", Pin.OUT)
+BUILT_IN_LED_PIN = 5 # Ο ακροδέκτης που είναι συνδεδμένο το ενσωματωμένο LED
 
-# The line below indicates we are configuring this as an output (not input)
-led = machine.Pin(BUILT_IN_LED_PIN, machine.Pin.OUT)
+# Ορισμός του ακροδέκτη 5 ως έξοδος. Η συνάρτηση Pin της MicroPython
+# μας επιτρέπει να προγραμματίζουμε την λειτουργία κάθε ενός ακροδέκτη GPIO
+led = Pin(BUILT_IN_LED_PIN, Pin.OUT)
 
-# Main loop: Repeat the forever...
-while True:
-    led.high() # turn on the LED
-    sleep(0.5) # leave it on for 1/2 second
-    led.low()  # Turn off the LED
-    sleep(0.5) # leave it off for 1/2 second
+# Οι εντολές που βρίσκονται μέσα στο while θα εκτελούνται για πάντα
+# αφού η συνθήκη του while θα είναι πάντα αληθής
+while True: 
+    led.high() # "άναμα" του LED
+    sleep(0.5) # το LED μένει αναμένο για 0.5 δευτερόλεπτα
+    led.low()  # "σβήσιμο" του LED
+    sleep(0.5) # το LED μένει σβηστό για 0.5 δευτερόλεπτα
 ```
