Αλλαγές στο Blink

--- a/01.Blink/01.Blink.md
+++ b/01.Blink/01.Blink.md
@@ -5,29 +5,60 @@
 Σ' αυτό το μάθημα, θα χρησιμοποιήσουμε την **MicroPython** για να αναβοσβήνουμε το LED που βρίσκεται πάνω στον μικροελεγκτή μας.
 Για τον προγραμματισμό, θα χρησιμοποιήσουμε το Thonny IDE.
 
-## Πώς "ανάβω" και "σβήνω" ένα LED
+## Πώς "ανάβω" και "σβήνω" (Blink) ένα LED
 
 Ο μικροελεγκτής που θα χρησιμοποιήσουμε στο εργαστήριο είναι o **ESP32 WeMos LOLIN32**. Στην παρακάτω εικόνα, μπορούμε να δούμε τον μικροελεγκτή και την λειτουργία που υποστηρίζει κάθε ένας ακροδέκτης του. Παρατηρώντας την εικόνα, θα εντοπίσουμε ακροδέκτες με όνομα **GPIOxx (General Purpose Input Output)** στους οποίος έχουμε την δυνατότητα να συνδέσουμε εξαρτήματα των οποίων την λειτουργία μπουρούμε να προγραμματίσουμε με την MicroPython. Επίσης, βλέπουμε ότι υπάρχουν **ακροδέκτες γείωσης (GND)** και **τάσης (3.3V)**.
 
 ![WeMos Lolin32](ESP32-WeMos-LOLIN32.jpg)
 
-Στον συγκεκριμένο μικροελεγκτή, το ενσωμετωμένο LED είναι συνδεδεμένο στον ακροδέκτη 5 και στο παρακάτω πρόγραμμα βλέπουμε τις εντολές με τις οποίες το "ανάβουμε" και το "σβήνουμε".
+Στον συγκεκριμένο μικροελεγκτή, το ενσωματωμένο LED είναι συνδεδεμένο στον ακροδέκτη 5 και στο παρακάτω πρόγραμμα βλέπουμε τις εντολές με τις οποίες το "ανάβουμε" και το "σβήνουμε".
 
 ```python
-from machine import Pin # Φόρτωση της συνάρτησης Pin από την βιβλιοθήκη machine.
-from time import sleep # Φόρτωση της συνάρτησης sleep από την βιβλιοθήκη time.
+from machine import Pin # Φόρτωση της συνάρτησης Pin από την βιβλιοθήκη machine
+from time import sleep # Φόρτωση της συνάρτησης sleep από την βιβλιοθήκη time
 
 BUILT_IN_LED_PIN = 5 # Ο ακροδέκτης που είναι συνδεδμένο το ενσωματωμένο LED
 
-# Ορισμός του ακροδέκτη 5 ως έξοδος. Η συνάρτηση Pin της MicroPython
+# Ορισμός του ακροδέκτη 5 ως έξοδο. Η συνάρτηση Pin της MicroPython
 # μας επιτρέπει να προγραμματίζουμε την λειτουργία κάθε ενός ακροδέκτη GPIO
 led = Pin(BUILT_IN_LED_PIN, Pin.OUT)
 
 # Οι εντολές που βρίσκονται μέσα στο while θα εκτελούνται για πάντα
 # αφού η συνθήκη του while θα είναι πάντα αληθής
 while True: 
-    led.high() # "άναμα" του LED
-    sleep(0.5) # το LED μένει αναμένο για 0.5 δευτερόλεπτα
+    led.high() # "άναμα" του LED 
+    sleep(0.5) # καμία λειτουργία για 0.5 δευτ. (Το LED μένει αναμένο για 0.5 δευτ.)
     led.low()  # "σβήσιμο" του LED
-    sleep(0.5) # το LED μένει σβηστό για 0.5 δευτερόλεπτα
+    sleep(0.5) # καμία λειτουργία για 0.5 δευτ. (Το LED μένει σβηστό για 0.5 δευτ.)
 ```
+
+*Μπορούμε να αντικαταστήσουμε την συνάρτηση high() με την on() και την συνάρτηση low() με την off().*
+
+## LED Blink με άλλο τρόπο
+
+Έχουμε τη δυνατότητα να χρησιμοποιήσουμε την συνάρτηση toggle() αντί των συναρτήσεων high() και low().
+
+```python
+from machine import Pin # Φόρτωση της συνάρτησης Pin από την βιβλιοθήκη machine
+from time import sleep # Φόρτωση της συνάρτησης sleep από την βιβλιοθήκη time
+
+BUILT_IN_LED_PIN = 5 # Ο ακροδέκτης που είναι συνδεδμένο το ενσωματωμένο LED
+
+# Ορισμός του ακροδέκτη 5 ως έξοδο. Η συνάρτηση Pin της MicroPython
+# μας επιτρέπει να προγραμματίζουμε την λειτουργία κάθε ενός ακροδέκτη GPIO
+led = Pin(BUILT_IN_LED_PIN, Pin.OUT)
+
+# Οι εντολές που βρίσκονται μέσα στο while θα εκτελούνται για πάντα
+# αφού η συνθήκη του while θα είναι πάντα αληθής
+while True: 
+    led.toggle() # αντιστροφή της κατάστασης του LED 
+    sleep(0.5) # καμία λειτουργία για 0.5 δευτ. (Το LED μένει σβηστό ή αναμένο για 0.5 δευτ.)
+```
+
+## Εργασίες
+
+1. Ποιές αλλαγές πρέπει να γίνουν έτσι ώστε το LED να αναβοσβήνει με ρυθμό 2 δευτερόλεπτα;
+2. Ποιός είναι ο μικρότερος χρόνος που το αναβόσβημα του LED γίνεται αντιληπτό από το ανθρώπινο μάτι;
+3. Να δημιουργήσετε πρόγραμμα το οποίο θα ανάβει και θα σβήνει το LED μεταδίδοντας **SOS** με τον κώδικα Morse. 
+
+
